# blog

./: .gitignore  .nojekyll  CNAME  README.md  _quarto.yml  index.html  index.qmd  listings.json  nb_runner.sh  pyproject.toml  robots.txt  search.json  sitemap.xml  thoughts.html  thoughts.md  vast_ai_setup.sh
content/: dicom_to_stl.html  dicom_to_stl.ipynb  head_attention.html  head_attention.ipynb  offline_rl.html  offline_rl.ipynb  offline_rl.py  runner.py  thoughts.html  thoughts.md
content/img/offline_rl/: tt_model.excalidraw
posts/: head_attention.ipynb
site_libs/bootstrap/: bootstrap-31203b635be0d1e0e0f8e50f4e183f41.min.css
